# cyclopts

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  README.md  README.rst  README_TEMPLATE.rst  bootstrap  build.py  pyproject.toml  scratch.py
.github/: FUNDING.yml  contributing.md
.github/workflows/: build_wheels.yaml  deploy.yaml  docker.yaml  tests.yaml
cyclopts/: __init__.py  __init__.pyi  __main__.py  _cache.py  _convert.py  _edit.py  _env_var.py  _markup.py  _path_type.py  _result_action.py  _result_mode.py  _run.py  annotations.py  app_stack.py  appstack.py  argument.py  ast_utils.py  bind.py  coercion.py  command_spec.py  completion.py  completions.py  core.py  doc_gen.py  docstring.py  exceptions.py  field_info.py  group.py  group_extractors.py  help.py  loader.py  mkdocs_ext.py  name_transforms.py  panel.py  parameter.py  protocols.py  resolve.py  sphinx_ext.py  token.py  types.py  (+2 more)
cyclopts/argument/: __init__.py  _argument.py  _ast_argument.py  _collection.py  utils.py
cyclopts/autodecorate/help/: __init__.py  formatters.py  help.py  protocols.py  specs.py
cyclopts/bound_args_transforms/: __init__.py  _common.py  _json.py  _toml.py  _yaml.py
cyclopts/cli/: __init__.py  _complete.py  completion.py  docs.py  main.py  run.py  tree.py
cyclopts/coercion/: __init__.py  _common.py
cyclopts/completion/: __init__.py  _base.py  base.py  bash.py  detect.py  fish.py  install.py  zsh.py
cyclopts/config/: __init__.py  _common.py  _env.py  _json.py  _toml.py  _yaml.py
cyclopts/docs/: __init__.py  base.py  html.py  markdown.py  rst.py  types.py
cyclopts/ext/: mkdocs.py  sphinx.py
cyclopts/help/: __init__.py  converters.py  formatters.py  help.py  inline_text.py  protocols.py  rst_preprocessor.py  silent.py  specs.py  utils.py
cyclopts/help/formatters/: __init__.py  _shared.py  default.py  html.py  markdown.py  plain.py  rst.py  utils.py
cyclopts/validators/: __init__.py  _group.py  _number.py  _path.py  _slice.py
demos/lazy-loading/: README.md  main_eager.py  main_lazy.py
demos/lazy-loading/commands/: __init__.py  ml.py  reports.py  users.py
docs/: Makefile
docs/source/: Installation.rst  api.rst  app_calling.rst  args_and_kwargs.rst  autoregistry.rst  cli_reference.rst  command_chaining.rst  commands.rst  conf.py  config_file.rst  default_parameter.rst  getting_started.rst  group_validators.rst  groups.rst  help.rst  help_customization.rst  index.rst  known_issues.rst  lazy_loading.rst  meta_app.rst  mkdocs_integration.rst  packaging.rst  parameter_validators.rst  parameters.rst  parse_mode.rst  pydantic.rst  rules.rst  shell_completion.rst  sphinx_integration.rst  text_editor.rst  user_classes.rst  validators.rst  version.rst
docs/source/_static/: custom.css
docs/source/_templates/: searchbox.html
docs/source/cookbook/: app_upgrade.rst  dataclass_commands.rst  file_or_stdin_stdout.rst  interactive_help.rst  pyproject.rst  random_tips.rst  rich_formatted_exceptions.rst  sharing_parameters.rst  sharing_resources.py  sharing_resources.rst  unit_testing.rst
docs/source/migration/: typer.rst
docs/source/vs_arguably/: README.rst
docs/source/vs_fire/: README.rst
docs/source/vs_typer/: README.rst
docs/source/vs_typer/choices/: README.rst  (+1 more)
examples/: demo_command_filtering.py  demo_group_formatters.py  demo_plain_help.py  demo_rst_docs.py  help_customization.py  list_of_dataclasses.py  sphinx_distinct_headings.py  sphinx_integration_example.py
pythontemplate/: __main__.py  _c_extension.pyx  cpythontemplate.pxd
pythontemplate/_c_src/: foo.c  foo.h
pythontemplate/cli/: main.py
tests/: README.md  conftest.py  empty_app.py  test_annotations.py  test_app_attribute_inheritance.py  test_app_name_derivation.py  test_app_stack_overrides.py  test_app_utils.py  test_argument.py  test_ast_utils.py  test_async.py  test_auto_alias.py  test_bind.py  test_bind_attrs.py  test_bind_basic.py  test_bind_boolean_flag.py  test_bind_coerce_override.py  test_bind_converter_validator.py  test_bind_custom_type.py  test_bind_dataclasses.py  test_bind_dict.py  test_bind_empty_iterable.py  test_bind_env_var.py  test_bind_generic_class.py  test_bind_kwargs.py  test_bind_list.py  test_bind_namedtuple.py  test_bind_no_parse.py  test_bind_none.py  test_bind_pos_only.py  test_bind_tuple.py  test_bind_typed_dict.py  test_bind_union.py  test_bind_unpack_typed_dict.py  test_bind_var_pos.py  test_coercion.py  test_command_collision.py  test_command_tree.py  test_completions.py  test_console.py  (+69 more)
tests/apps/: README.md  config.toml  draw.py  test_burgery.py
tests/apps/complex-demo/: .gitignore  README.md  complex_app.py  mkdocs.yml  pyproject.toml
tests/apps/complex-demo/docs/source/: conf.py  index.rst
tests/apps/complex-demo/docs/source/cli/: admin.rst  data.rst  full.rst  index.rst  server.rst  utilities.rst
tests/apps/complex-demo/mkdocs_docs/: index.md
tests/apps/complex-demo/mkdocs_docs/cli/: admin.md  data.md  full.md  index.md  server.md  utilities.md
tests/apps/cyclopts-demo/: README.md  cyclopts_demo.py  install.sh  mkdocs.yml  pyproject.toml
tests/apps/cyclopts-demo/docs/: index.md
tests/bind/: test_basic.py
tests/bound_args_transforms/: test_common.py  test_end2end.py  test_json.py  test_toml.py  test_yaml.py
tests/cli/: test_complete.py  test_generate_docs.py  test_run.py  test_tree.py
tests/completion/: __init__.py  apps.py  conftest.py  test_bash.py  test_behavior.py  test_detect.py  test_fish.py  test_install.py  test_zsh.py
tests/config/: test_common.py  test_dict.py  test_end2end.py  test_env.py  test_json.py  test_source_parameter.py  test_toml.py  test_toml_dataclass_list.py  test_yaml.py  test_yaml_dataclass_list.py
tests/py312/: test_stdio_path.py  test_type_alias_parameter.py
tests/types/: test_types_json.py  test_types_nested_annotations.py  test_types_number.py  test_types_path.py  test_types_slice.py  test_types_web.py
tests/validators/: test_number.py  test_validator_group.py  test_validator_number.py  test_validator_path.py  test_validator_slice.py
(+53 files in other folders)
