[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cyclopts-demo"
version = "0.1.0"
description = "Demo application for testing Cyclopts completion features"
authors = ["Test <test@example.com>"]
packages = [{include = "cyclopts_demo.py"}]

[tool.poetry.dependencies]
python = "^3.10"
cyclopts = {path = "../../..", develop = true}

[tool.poetry.scripts]
cyclopts-demo = "cyclopts_demo:app"
