[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyclopts-demo"
version = "0.1.0"
description = "Demo application for testing Cyclopts completion features"
authors = [{name = "Test", email = "test@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "cyclopts",
]

[project.scripts]
cyclopts-demo = "cyclopts_demo:app"

[tool.hatch.build.targets.wheel]
packages = ["cyclopts_demo.py"]

[tool.uv.sources]
cyclopts = { path = "../../..", editable = true }
